Make the container name follow the project name

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -1,5 +1,5 @@
 {
-    "name": "test", // コンテナ名
+    "name": "sample_project", // コンテナ名
     "dockerComposeFile": [
         "docker-compose.yml"
     ],
